Various updates with rewording

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -132,7 +132,7 @@
               </div>
           </div>
           <div class="panel panel-default links-section">
-              <div class="panel-heading">Links section</div>
+              <div class="panel-heading">Links Section</div>
               <div class="panel-body">
                   <img src="/images/astu_logo_ph.png" class='background' />
                   <strong>
@@ -159,7 +159,7 @@
           </div>
 
           <div class="panel panel-default">
-              <div class="panel-heading">Status</div>
+              <div class="panel-heading">Site Status</div>
               <div class="panel-body">
                   Under Development
               </div>
@@ -169,7 +169,7 @@
           <div class='tabs'>
             <a href="/"><div class='alt-back'>Home</div></a>
             <a href="/about"><div class='alt-back'>About the Site</div></a>
-            <a href="http://www.amazon.co.uk/dp/0993415504" target="book"><div class='alt-back'>Buy the books</div></a>
+            <a href="http://www.amazon.co.uk/dp/0993415504" target="book"><div class='alt-back'>Buy the Books</div></a>
           </div>
           <div class="panel panel-default">              
               <div class="panel-body">
@@ -180,7 +180,7 @@
         <div class='col-md-2'>
           <img src="/images/hannover-logo-large.png" style='width: 100%;'/>
           <div class='clear center'>
-            <a href="http://markjdiez.com/" target="site">Main site</a>
+            <a href="http://markjdiez.com/" target="site">Author Site</a>
             |
             <a href="http://markjdiez.com/doku/doku.php" target="site">Wiki</a>
           </div>
