--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,27 +9,27 @@
 		<form class="form-horizontal">
 		    <fieldset class='margin-top'>
 		        <legend>Choose your team 
-		        	<span class="badge" title='Choose wisely, you cannor change easily...'>?</span></legend>
+		        	<span class="badge" title='Choose wisely, you cannot change easily...'>?</span></legend>
 		        <div class="form-group">
 		            <div 
 		            ng-click='auth.model.team="astu"'
 		            ng-class='{selected: auth.model.team=="astu"}'
 		            class="col-md-4 center team">
-		                <div class='icon-stub'></div>
+		                <div class='icon-stub'>aa</div>
 		                Join ASTU as an Officer
 		            </div>
 		            <div 
 		            ng-click='auth.model.team="blackdragon"'
 		            ng-class='{selected: auth.model.team=="blackdragon"}'
 		            class="col-md-4 center team">
-		                <div class='icon-stub'></div>
-		                Join Black Dragon as an Initate
+		                <div class='icon-stub'>aa</div>
+		                Join Black Dragon as an Initiate
 		            </div>
 		            <div 
 		            ng-click='auth.model.team="sorcesec"'
 		            ng-class='{selected: auth.model.team=="sorcesec"}'
 		            class="col-md-4 center team">
-		                <div class='icon-stub'></div>
+		                <div class='icon-stub'>aa</div>
 		                Join SorceSec as a Hacker
 		            </div>
 		        </div>
@@ -48,7 +48,7 @@
 		            </div>
 		            <div class='col-md-1'>
 		            	<span class="badge" 
-		                title="You need a copy of Direct Action to work out the Cypher Code. Click on the 'Buy the books' tab above.">?</span>
+		                title="You need a copy of The Hannover Game to work out the Cypher Code. Click on the 'Buy the books' tab above.">?</span>
 		            </div>
 		        </div>
 		    </fieldset>
@@ -102,7 +102,7 @@
 			        </div>
 		        </div>
 		        <div class='col-md-6'>
-		        	<legend>Or use facebook account</legend>
+		        	<legend>Or use your Facebook account</legend>
 		        	<div class="form-group center">
 			            <a ng-href='/auth/facebook/true/{{auth.model.team}}/{{auth.model.captcha}}' ng-disabled='!auth.validateFb()' class='btn btn-info btn-raised'>Login with facebook</a>
 			        </div>
