--- a/views/games/textQuest.ejs
+++ b/views/games/textQuest.ejs
@@ -2,14 +2,14 @@
 <script type="text/javascript" src="/js/games/textQuest.js"></script>
 <div class='main'>
 	<div class='action_1'>
-		<h2 class='state_1'>You are standing at the door. What are you going to do?</h2>
+		<h2 class='state_1'>You are standing at a door. What are you going to do?</h2>
 		<h2 class='state_2' 
 		style='display:none;'>You knocked at the door. Nothing happened. What's next?</h2>
 		<h2 class='state_3' 
 		style='display:none;'>You are waiting. Nothing happenes. What's next?</h2>
 		<ul>
 			<li data-action='1'>Knock at the door</li>
-			<li data-action='2'>Batter the door</li>
+			<li data-action='2'>Batter the door down</li>
 			<li data-action='3'>Just wait</li>
 		</ul>
 	</div>
