--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,27 +9,27 @@
 		<form class="form-horizontal">
 		    <fieldset class='margin-top'>
 		        <legend>Choose your team 
-		        	<span class="badge" title='Choose wisely, you cannot change easily...'>?</span></legend>
+		        	<span class="badge" title='Choose wisely, you cannot change easily!'>?</span></legend>
 		        <div class="form-group">
 		            <div 
 		            ng-click='auth.model.team="astu"'
 		            ng-class='{selected: auth.model.team=="astu"}'
 		            class="col-md-4 center team">
-		                <div class='icon-stub'>aa</div>
+		                <div class='icon-stub'></div>
 		                Join ASTU as an Officer
 		            </div>
 		            <div 
 		            ng-click='auth.model.team="blackdragon"'
 		            ng-class='{selected: auth.model.team=="blackdragon"}'
 		            class="col-md-4 center team">
-		                <div class='icon-stub'>aa</div>
+		                <div class='icon-stub'></div>
 		                Join Black Dragon as an Initiate
 		            </div>
 		            <div 
 		            ng-click='auth.model.team="sorcesec"'
 		            ng-class='{selected: auth.model.team=="sorcesec"}'
 		            class="col-md-4 center team">
-		                <div class='icon-stub'>aa</div>
+		                <div class='icon-stub'></div>
 		                Join SorceSec as a Hacker
 		            </div>
 		        </div>
