--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,9 +1,12 @@
-<h1>Hannover Reader's website</h1>
+<h1>Mark J Diez - Reader's Website</h1>
 
-<p>Introduction text goes here. Tell people what the site is about.</p>
+<p>Welcome to the site!</p>
 
-<p>In order to use the site you will need to have a copy of the book, The Hannover Game.</p>
+<p>In order to join a team and play the puzzles, you will need to have a copy of the book, The Hannover Game.</p>
+
+<h2>News &amp; Updates</h2>
+<p>new and updates items go here, changes to the site, etc.</p>
 
 <p>Buy the book <a href="http://markjdiez.com/about.html" target="book">here.</a></p>
 
-<a href="/register">Join the reader Community</a></p>
+<nav><a href="/register">Join the Reader Community</a></nav></p>
