Further updates to the home.ejs file

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,6 +7,12 @@
 <h2>News &amp; Updates</h2>
 <p>new and updates items go here, changes to the site, etc.</p>
 
-<p>Buy the book <a href="http://markjdiez.com/about.html" target="book">here.</a></p>
+<p>Buy the book <a href="http://markjdiez.com/about.html" target="book" title="Buy the Book">here.</a></p>
 
-<nav><a href="/register">Join the Reader Community</a></nav></p>
+<nav>
+    <a href="/register">Join the Reader Community</a>
+    <a href="/register">Join the Reader Community</a>
+    <a href="/register">Join the Reader Community</a>
+</nav>
+
+<p>Another section</p>
