Updates to layout.ejs

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,4 @@
-<h1>Mark J Diez - Reader's Website</h1>
+<h1 align="Center">Mark J Diez - Reader's Website</h1>
 
 <p>Welcome to the site!</p>
 
@@ -9,10 +9,6 @@
 
 <p>Buy the book <a href="http://markjdiez.com/about.html" target="book" title="Buy the Book">here.</a></p>
 
-<nav>
-    <a href="/register">Join the Reader Community</a>
-    <a href="/register">Join the Reader Community</a>
-    <a href="/register">Join the Reader Community</a>
-</nav>
+<p><a href="/register">Join the Reader Community</a></p>
 
 <p>Another section</p>
