--- a/views/register.ejs
+++ b/views/register.ejs
@@ -30,13 +30,13 @@
 		            ng-class='{selected: auth.model.team=="sorcesec"}'
 		            class="col-md-4 center team">
 		                <div class='icon-stub'></div>
-		                Join SorceSec as a Hacker
+		                Join SorceSek as a Hacker
 		            </div>
 		        </div>
 		    </fieldset>
 
 		    <fieldset class='margin-top'>
-		        <legend>Crack your first code, complete the sentence from the book</legend>
+		        <legend>Crack your first code - complete the sentence from the book</legend>
 		        <h4><strong>Chapter <%= code.chapter %>, paragraph <%= code.paragraph %></strong></h4>
 		        <h4><%- code.sentence %></h4>
 		        <div class="form-group">
@@ -48,7 +48,7 @@
 		            </div>
 		            <div class='col-md-1'>
 		            	<span class="badge" 
-		                title="You need a copy of The Hannover Game to work out the Cypher Code. Click on the 'Buy the books' tab above.">?</span>
+		                title="You need a copy of The Hannover Game to work out the Cipher Code. Click on the 'Buy the books' tab above.">?</span>
 		            </div>
 		        </div>
 		    </fieldset>
@@ -98,7 +98,7 @@
 			        <div class="form-group center">
 			            <button type='submit' 
 			            ng-click='auth.register()'
-			            ng-disabled='!auth.validate()' class='btn btn-success btn-raised'>Sign-up</button>
+			            ng-disabled='!auth.validate()' class='btn btn-success btn-raised'>Sign up</button>
 			        </div>
 		        </div>
 		        <div class='col-md-6'>
