Update of SorceSec to SorceSek

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,12 +1,15 @@
 <h1 align="Center">Mark J Diez - Reader's Website</h1>
 
-<p>Welcome to the site!</p>
+<h1>Welcome to the site!</h1>
 
 <p>In order to join a team and play the puzzles, you will need to have a copy of the book, The Hannover Game.</p>
 
 <h2>News &amp; Updates</h2>
-<p>new and updates items go here, changes to the site, etc.</p>
+<p>Amazon - The book has now been re-priced to <a href="http://bit.ly/TheHannoverGame" target="book" title="Buy the eBook">£5.78 for the eBook</a> and <a href="http://bit.ly/HannoverGameEbook" target="book" title="Buy the Print book">£8.94 for the Print</a> book. It will stay at this price over the Christmas break when we'll see how </p>
 
+<p>Kobo and Waterstones - I've just started to process the book onto Kobo and Waterstones and should have it available there in the next couple of weeks.</p>
+
+<!-- Buy the Book -->
 <p>Buy the book <a href="http://markjdiez.com/about.html" target="book" title="Buy the Book">here.</a></p>
 
 <p><a href="/register">Join the Reader Community</a></p>
