--- a/views/rankings.ejs
+++ b/views/rankings.ejs
@@ -26,7 +26,7 @@
 					Black Dragon
 				<% } %>
 				<% if(users[i].team == 'sorcesec'){%>
-					SourceSec
+					SourceSek
 				<% } %>
 				</td>
 				<td><%= users[i].points %></td>
