--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,17 +1,22 @@
 <h1 align="Center">Mark J Diez - Reader's Website</h1>
 
-<h1>Welcome to the site!</h1>
+<p><b>Welcome to the site!</b>
+In the Hannover Game series, the world is a battle ground of brains and brawn combined. Whether Hannover, ASTU, SorceSek or Black Dragon; everyone is called up to apply thier intelligence and shift the Balance of Power to thier group.<br>
 
-<p>In order to join a team and play the puzzles, you will need to have a copy of the book, The Hannover Game.</p>
+As an owner of the novel you too can join a team and battle for dominance over other players and thier teams!<br>
+If you don't own a copy, get it from Amazon as an <a href="http://bit.ly/TheHannoverGame" target="book" title="Buy the eBook">eBook</a> or in <a href="http://bit.ly/HannoverGameEbook" target="book" title="Buy the Print book">Print</a></p>
+
+<p>All you need to do is:<br>
+    <ul>
+        <li><a href="/register">Sign-up on this site</a> and choose your team</li>
+        <li>Use your copy of the novel to break the first code</li>
+        <li>... then start to beat the puzzles and shift the Balance of Power!</li>
+    </ul>
+</p>
+
+<hr>
 
 <h2>News &amp; Updates</h2>
-<p>Amazon - The book has now been re-priced to <a href="http://bit.ly/TheHannoverGame" target="book" title="Buy the eBook">£5.78 for the eBook</a> and <a href="http://bit.ly/HannoverGameEbook" target="book" title="Buy the Print book">£8.94 for the Print</a> book. It will stay at this price over the Christmas break when we'll see how </p>
+<p><b>Amazon</b> - The book has now been re-priced to <a href="http://bit.ly/TheHannoverGame" target="book" title="Buy the eBook">£5.78 for the eBook</a> and <a href="http://bit.ly/HannoverGameEbook" target="book" title="Buy the Print book">£8.94 for the Print</a> book. It will stay at this price over the Christmas break when we'll see how readers have responded to the pricing.</p>
 
-<p>Kobo and Waterstones - I've just started to process the book onto Kobo and Waterstones and should have it available there in the next couple of weeks.</p>
-
-<!-- Buy the Book -->
-<p>Buy the book <a href="http://markjdiez.com/about.html" target="book" title="Buy the Book">here.</a></p>
-
-<p><a href="/register">Join the Reader Community</a></p>
-
-<p>Another section</p>
+<p><b>Kobo and Waterstones</b> - I've just started to process the book onto Kobo and Waterstones and should have it available there in the next couple of weeks.</p>
