--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,10 +1,10 @@
 <h1 align="Center">Mark J Diez - Reader's Website</h1>
 
-<p><b>Welcome to the site!</b>
-In the Hannover Game series, the world is a battle ground of brains and brawn combined. Whether Hannover, ASTU, SorceSek or Black Dragon; everyone is called up to apply thier intelligence and shift the Balance of Power to thier group.<br>
+<p><b>Welcome to the site!</b><br>
+In the Hannover Game series, the world is a battle ground of brains and brawn combined. Whether Hannover, ASTU, SorceSek or Black Dragon; everyone is called up to apply their intelligence and shift the Balance of Power to their group.</p>
 
-As an owner of the novel you too can join a team and battle for dominance over other players and thier teams!<br>
-If you don't own a copy, get it from Amazon as an <a href="http://bit.ly/TheHannoverGame" target="book" title="Buy the eBook">eBook</a> or in <a href="http://bit.ly/HannoverGameEbook" target="book" title="Buy the Print book">Print</a></p>
+<p>As an owner of the novel <b>you too can join a team</b> and battle for dominance over other players and their teams!<br>
+If you don't own a copy, get it from Amazon as an <a href="http://bit.ly/TheHannoverGame" target="book" title="Buy the eBook"><b>eBook</b></a> or in <a href="http://bit.ly/HannoverGameEbook" target="book" title="Buy the Print book"><b>Print</b></a></p>
 
 <p>All you need to do is:<br>
     <ul>
