--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,16 +6,17 @@
 <p>As an owner of the novel <b>you too can join a team</b> and battle for dominance over other players and their teams!<br>
 If you don't own a copy, get it from Amazon as an <a href="http://bit.ly/TheHannoverGame" target="book" title="Buy the eBook"><b>eBook</b></a> or in <a href="http://bit.ly/HannoverGameEbook" target="book" title="Buy the Print book"><b>Print.</b></a></p>
 
-<p><b>Join a team today.</b><br>
-To start competing in the world of Hannover all you need to do is:<br>
+<p><b>Join a team today</b><br>
+To start competing in the world of Hannover all you need to do is:
     <ul>
         <li><a href="/register">Sign-up on this site</a> and choose your team</li>
         <li>Use your copy of the novel to break the first code</li>
-        <li>... then start to beat the puzzles and shift the Balance of Power!</li>
+        <li>Start to beat the puzzles and shift the Balance of Power!</li>
     </ul>
 </p>
 
-<p align="center"><b>Good luck and Iacta Alea Esto!</b></p>
+<h3 align="center">Good luck and Iacta Alea Esto!<br>
+Mark J Diez</h3>
 
 <hr>
 
