updates to home.ejs

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,22 +1,20 @@
-<h1 align="Center">Mark J Diez - Reader's Website</h1>
 
-<h2>Welcome to the site!</h2>
+<h1 align="center">Welcome to the Hannover Series Website</h1>
 <p>In the Hannover series, the world is a battle ground of a mental and physical prowess. Whether Hannover, ASTU, SorceSek or Black Dragon; everyone is called on to apply their intelligence and shift the Balance of Power.</p>
 
 <p>As an owner of the novel <b>you too can join a team</b> and battle for dominance over other players and their teams!<br>
 If you don't own a copy, get it from Amazon as an <a href="http://bit.ly/TheHannoverGame" target="book" title="Buy the eBook"><b>eBook</b></a> or in <a href="http://bit.ly/HannoverGameEbook" target="book" title="Buy the Print book"><b>Print.</b></a></p>
 
-<p><b>Join a team today</b><br>
-To start competing in the world of Hannover all you need to do is:
+<h2>Join a team today</h2>
+<p>To start competing in the world of Hannover all you need to do is:
     <ul>
         <li><a href="/register">Sign-up on this site</a> and choose your team</li>
         <li>Use your copy of the novel to break the first code</li>
         <li>Start to beat the puzzles and shift the Balance of Power!</li>
     </ul>
-</p>
 
-<h3 align="center">Good luck and Iacta Alea Esto!<br>
-Mark J Diez</h3>
+Mark J Diez
+</p>
 
 <hr>
 
