--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,9 +1,13 @@
 
-<h1 align="center">Welcome to the Hannover Series Website</h1>
-<p>In the Hannover series, the world is a battle ground of a mental and physical prowess. Whether Hannover, ASTU, SorceSek or Black Dragon; everyone is called on to apply their intelligence and shift the Balance of Power.</p>
+<h1>Welcome to the Hannover Series Website</h1>
+<p>In the Hannover series, the world is a battle ground for proving your mental and physical prowess. Whether Hannover, ASTU, SorceSek or Black Dragon; everyone is called on to apply their intelligence and shift the Balance of Power in the world.</p>
 
-<p>As an owner of the novel <b>you too can join a team</b> and battle for dominance over other players and their teams!<br>
+<p>As an owner of the novel <b>you too can join a team</b> and battle for dominance over other players and their teams.<br>
 If you don't own a copy, get it from Amazon as an <a href="http://bit.ly/TheHannoverGame" target="book" title="Buy the eBook"><b>eBook</b></a> or in <a href="http://bit.ly/HannoverGameEbook" target="book" title="Buy the Print book"><b>Print.</b></a></p>
+
+<p><b>Mark J Diez</b></p>
+
+<hr>
 
 <h2>Join a team today</h2>
 <p>To start competing in the world of Hannover all you need to do is:
@@ -13,7 +17,6 @@ If you don't own a copy, get it from Amazon as an <a href="http://bit.ly/TheHann
         <li>Start to beat the puzzles and shift the Balance of Power!</li>
     </ul>
 
-Mark J Diez
 </p>
 
 <hr>
