--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,20 +2,22 @@
 <h1>Welcome to the Hannover Series Website</h1>
 <p>In the Hannover series, the world is a battle ground for proving your mental and physical prowess. Whether Hannover, ASTU, SorceSek or Black Dragon; everyone is called on to apply their intelligence and shift the Balance of Power in the world.</p>
 
-<p>As an owner of the novel <b>you too can join a team</b> and battle for dominance over other players and their teams.<br>
+<p>As an owner of the novel <b style="color: red">you too can join a team</b> and battle for dominance over other players and their teams.<br>
 If you don't own a copy, get it from Amazon as an <a href="http://bit.ly/TheHannoverGame" target="book" title="Buy the eBook"><b>eBook</b></a> or in <a href="http://bit.ly/HannoverGameEbook" target="book" title="Buy the Print book"><b>Print.</b></a></p>
 
 <p><b>Mark J Diez</b></p>
 
 <hr>
 
-<h2>Join a team today</h2>
+<h2>Join a Team today</h2>
 <p>To start competing in the world of Hannover all you need to do is:
     <ul>
-        <li><a href="/register">Sign-up on this site</a> and choose your team</li>
-        <li>Use your copy of the novel to break the first code</li>
-        <li>Start to beat the puzzles and shift the Balance of Power!</li>
+        <li>- <a href="/register">Sign-up on this site</a> and choose your team</li>
+        <li>- Use your copy of the Hannover Game to break the first code</li>
+        <li>- Start to beat the puzzles and shift the Balance of Power!</li>
     </ul>
+
+<img src="images/game-signup-flow.png" alt="Join the site and play the games" title="Join the Site and Play the Games">
 
 </p>
 
