--- a/views/register.ejs
+++ b/views/register.ejs
@@ -37,7 +37,7 @@
 
 		    <fieldset class='margin-top'>
 		        <legend>Crack your first code - complete the sentence from the book</legend>
-		        <h4><strong>Chapter <%= code.chapter %>, paragraph <%= code.paragraph %></strong></h4>
+		        <h4><strong>Chapter <%= code.chapter %>, Paragraph <%= code.paragraph %></strong></h4>
 		        <h4><%- code.sentence %></h4>
 		        <div class="form-group">
 		            <label for="pass-conf" class="col-md-3 control-label">Enter the code</label>
