--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -78,7 +78,7 @@
             SourceSek
           <% } %> 
           <% if(teams.best){%>
-          is winning now.
+          hold the Balance of Power.
           <% } %> 
         </div>
         <% if(!currentUser){ %>
@@ -143,8 +143,8 @@
               </div>
               <div class="panel-body">
                   <img style='width: 100%;' ng-src="{{auth.currentUser.profilePicLarge}}"/>
-                  <a href="/profile">Profile </a><a href="/edit"> (edit)</a><br/>
-                  <a href="/auth/logout">Sign out</a>
+                  <a href="/profile">Profile </a><a href="/edit"> [edit]</a><br/>
+                  <a href="/auth/logout">Sign Out</a>
               </div>
           </div>
           <div class="panel panel-default links-section">
@@ -159,7 +159,7 @@
                       <a href="/rankings">Rankings</a>
                     </li>
                     <li>
-                      <a href="/points">Challenge Points</a>
+                      <a href="/points">Points Table</a>
                     </li>
                   </ul>
 
