--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,21 +9,22 @@ If you don't own a copy, get it from Amazon as an <a href="http://bit.ly/TheHann
 
 <hr>
 
-<h2>Join a Team today</h2>
+<h2 style="color: red">Join a Team today</h2>
 <p>To start competing in the world of Hannover all you need to do is:
-    <ul>
-        <li>- <a href="/register">Sign-up on this site</a> and choose your team</li>
-        <li>- Use your copy of the Hannover Game to break the first code</li>
-        <li>- Start to beat the puzzles and shift the Balance of Power!</li>
-    </ul>
 
-<img src="images/game-signup-flow.png" alt="Join the site and play the games" title="Join the Site and Play the Games">
 
+<span align="center"><img src="images/game-signup-flow.png" alt="Join the site and play the games" title="Join the Site and Play the Games">
+
+    <div><a href="/register">Sign-up on this site</a> and choose your team</div>
+    <div>Use your copy of the Hannover Game to break the first code</div>
+    <div>Start to beat the puzzles and shift the Balance of Power!</div>
+    
 </p>
+</span>
 
 <hr>
 
-<h2>News &amp; Updates</h2>
+<h2 style="color: red">News &amp; Updates</h2>
 <p><b>Amazon</b> - The book has now been re-priced to <a href="http://bit.ly/TheHannoverGame" target="book" title="Buy the eBook">£5.78 for the eBook</a> and <a href="http://bit.ly/HannoverGameEbook" target="book" title="Buy the Print book">£8.94 for the Print</a> book. It will stay at this price over the Christmas break when we'll see how readers have responded to the pricing.</p>
 
 <p><b>Kobo and Waterstones</b> - I've just started to process the book onto Kobo and Waterstones and should have it available there in the next couple of weeks.</p>
