--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,17 +10,18 @@ If you don't own a copy, get it from Amazon as an <a href="http://bit.ly/TheHann
 <hr>
 
 <h2 style="color: red">Join a Team today</h2>
-<p>To start competing in the world of Hannover all you need to do is:
+<p>To start competing in the world of Hannover all you need to do is:<br>
 
 
-<span align="center"><img src="images/game-signup-flow.png" alt="Join the site and play the games" title="Join the Site and Play the Games">
+<img src="images/game-signup-flow.png" alt="Join the site and play the games" title="Join the Site and Play the Games" align="center">
 
-    <div><a href="/register">Sign-up on this site</a> and choose your team</div>
-    <div>Use your copy of the Hannover Game to break the first code</div>
-    <div>Start to beat the puzzles and shift the Balance of Power!</div>
+    <div>
+        <span><a href="/register">Sign-up on this site</a> and choose your team</span>
+        <span>Use your copy of the Hannover Game to break the first code</span>
+        <span>Start to beat the puzzles and shift the Balance of Power!</span>
+    </div>
     
 </p>
-</span>
 
 <hr>
 
