Added margins to the image on home.ejs

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,23 +9,23 @@ If you don't own a copy, get it from Amazon as an <a href="http://bit.ly/TheHann
 
 <hr>
 
-<h2 style="color: red">Join a Team today</h2>
+<h2 style="color: red;">Join a Team today</h2>
 <p>To start competing in the world of Hannover all you need to do is:<br>
 
 
 <img src="images/game-signup-flow.png" alt="Join the site and play the games" title="Join the Site and Play the Games" align="center">
 
     <div>
-        <span><a href="/register">Sign-up on this site</a> and choose your team</span>
-        <span>Use your copy of the Hannover Game to break the first code</span>
-        <span>Start to beat the puzzles and shift the Balance of Power!</span>
+        <span style="width: 67px; margin-right: 10px;"><a href="/register">Sign-up on this site</a> and choose your team</span>
+        <span style="width: 67px; margin-right: 10px;  margin-left: 10px;">Use your copy of the Hannover Game to break the first code</span>
+        <span style="width: 67px; margin-right: 10px;">Start to beat the puzzles and shift the Balance of Power!</span>
     </div>
     
 </p>
 
 <hr>
 
-<h2 style="color: red">News &amp; Updates</h2>
+<h2 style="color: red;">News &amp; Updates</h2>
 <p><b>Amazon</b> - The book has now been re-priced to <a href="http://bit.ly/TheHannoverGame" target="book" title="Buy the eBook">£5.78 for the eBook</a> and <a href="http://bit.ly/HannoverGameEbook" target="book" title="Buy the Print book">£8.94 for the Print</a> book. It will stay at this price over the Christmas break when we'll see how readers have responded to the pricing.</p>
 
 <p><b>Kobo and Waterstones</b> - I've just started to process the book onto Kobo and Waterstones and should have it available there in the next couple of weeks.</p>
