--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -246,7 +246,7 @@
         <div class="panel panel-default margin-top alt-back">
               <div class="panel-body center">
                   <h2>Footer</h2>
-                  <p>This is the footer panel where we can add some information and links.</p>
+                  <p><a href="/terms">Terms & Conditions</a></p>
               </div>              
           </div>
       </div>
