Added span style

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,12 +13,12 @@ If you don't own a copy, get it from Amazon as an <a href="http://bit.ly/TheHann
 <p>To start competing in the world of Hannover all you need to do is:<br>
 
 
-<img src="images/game-signup-flow.png" alt="Join the site and play the games" title="Join the Site and Play the Games" align="center">
+<img src="images/game-signup-flow.png" alt="Join the site and play the games" title="Join the Site and Play the Games" style="text-align: center;">
 
     <div>
-        <span style="width: 67px; margin-right: 10px;"><a href="/register">Sign-up on this site</a> and choose your team</span>
-        <span style="width: 67px; margin-right: 10px;  margin-left: 10px;">Use your copy of the Hannover Game to break the first code</span>
-        <span style="width: 67px; margin-right: 10px;">Start to beat the puzzles and shift the Balance of Power!</span>
+        <span style="width: 67px; margin-right: 10px; text-align:center; display:block;"><a href="/register">Sign-up on this site</a> and choose your team</span>
+        <span style="width: 67px; margin-right: 10px; text-align:center; display:block;">Use your copy of the Hannover Game to break the first code</span>
+        <span style="width: 67px; margin-right: 10px; text-align:center; display:block;">Start to beat the puzzles and shift the Balance of Power!</span>
     </div>
     
 </p>
