--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,11 +10,12 @@ If you don't own a copy, get it from Amazon as an <a href="http://bit.ly/TheHann
 <hr>
 
 <h2 style="color: red;">Join a Team today</h2>
-<p>To start competing in the world of Hannover all you need to do is:<br>
+<p>To start competing in the world of Hannover all you need to do is:</p>
 
 
-<img src="images/game-signup-flow.png" alt="Join the site and play the games" title="Join the Site and Play the Games" style="text-align: center;">
+<p><img src="images/game-signup-flow.png" alt="Join the site and play the games" title="Join the Site and Play the Games" style="text-align: center;"></p>
 
+<p>  
     <div>
         <span style="width: 67px; margin-right: 10px; text-align:center; display:block;"><a href="/register">Sign-up on this site</a> and choose your team</span>
         <span style="width: 67px; margin-right: 10px; text-align:center; display:block;">Use your copy of the Hannover Game to break the first code</span>
