--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,10 +16,9 @@ If you don't own a copy, get it from Amazon as an <a href="http://bit.ly/TheHann
 <p><img src="images/game-signup-flow.png" alt="Join the site and play the games" title="Join the Site and Play the Games" style="text-align: center;"></p>
 
 <p>  
-    <div>
-        <span style="width: 67px; margin-right: 10px; text-align:center; display:block;"><a href="/register">Sign-up on this site</a> and choose your team</span>
-        <span style="width: 67px; margin-right: 10px; text-align:center; display:block;">Use your copy of the Hannover Game to break the first code</span>
-        <span style="width: 67px; margin-right: 10px; text-align:center; display:block;">Start to beat the puzzles and shift the Balance of Power!</span>
+<a href="/register" style="hover: background-color: yellow;">Sign-up on this site</a> and choose your team
+Use your copy of the Hannover Game to break the first code
+Start to beat the puzzles and shift the Balance of Power!
     </div>
     
 </p>
