--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,14 +13,16 @@ If you don't own a copy, get it from Amazon as an <a href="http://bit.ly/TheHann
 <p>To start competing in the world of Hannover all you need to do is:</p>
 
 
-<p><img src="images/game-signup-flow.png" alt="Join the site and play the games" title="Join the Site and Play the Games" style="text-align: center;"></p>
+<p align="center"><img src="images/game-signup-flow.png" alt="Join the site and play the games" title="Join the Site and Play the Games" style="text-align: center;"></p>
+
+<p>
+<img src="images/game-signup-flow-001.png"><img src="images/game-signup-flow-002.png"><img src="images/game-signup-flow-003.png">
+</p>
 
 <p>  
-<a href="/register" style="hover: background-color: yellow;">Sign-up on this site</a> and choose your team
-Use your copy of the Hannover Game to break the first code
-Start to beat the puzzles and shift the Balance of Power!
-    </div>
-    
+    <a href="/register">Sign-up on this site</a> and choose your team<br>
+    Use your copy of the Hannover Game to break the first code<br>
+    Start to beat the puzzles and shift the Balance of Power!<br>
 </p>
 
 <hr>
