--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,17 +12,12 @@ If you don't own a copy, get it from Amazon as an <a href="http://bit.ly/TheHann
 <h2 style="color: red;">Join a Team today</h2>
 <p>To start competing in the world of Hannover all you need to do is:</p>
 
-
-<p align="center"><img src="images/game-signup-flow.png" alt="Join the site and play the games" title="Join the Site and Play the Games" style="text-align: center;"></p>
-
-<p>
-<img src="images/game-signup-flow-001.png"><img src="images/game-signup-flow-002.png"><img src="images/game-signup-flow-003.png">
-</p>
-
 <p>  
-    <a href="/register">Sign-up on this site</a> and choose your team<br>
-    Use your copy of the Hannover Game to break the first code<br>
-    Start to beat the puzzles and shift the Balance of Power!<br>
+    <ul>
+        <li>&diams; <a href="/register">Sign-up on this site</a> and choose your team</li>
+        <li>&diams; Use your copy of the Hannover Game to break the first code</li>
+        <li>&diams; Start to beat the puzzles and shift the Balance of Power!</li>
+    </ul>
 </p>
 
 <hr>
