Update About page

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,1 +1,18 @@
 <h1>About</h1>
+
+<h2 style="color: red;">About the Website</h2>
+<p>Additional text and items go here</p>
+
+
+<h2 style="color: red;">About the Hannover Game</h2>
+<p>Additional text and items go here</p>
+
+
+<h2 style="color: red;">About the Author</h2>
+<p>
+    <img src="images/markJDiez-001.jpg" id="markJDiezProfilePic" alt="Picture of Mark J Diez" align="left" style="margin-right:10px;">
+    
+    Mark J Diez began writing fiction in 1995, starting with the Tales of Malartu fantasy series of short stories and gamebooks. After several years focusing on fantasy adventure writing for video and board game worlds he migrated to action adventure and the Hannover series.<br>
+
+His debut novel, The Hannover Game, is an innovative break from the usual indie author approaches. Drawing on his experience creating fantasy worlds, Diez has wrapped the novel in a lively online community and website. Readers are able to join one of the Hannover world's teams, complete puzzles, solve challenges and shift the Balance of Power in their favour.
+</p>
