--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,30 +1,32 @@
-<h1>About</h1>
-
-<h2 style="color: red;">About the Website</h2>
+<h1 style="color: red;">About the Website</h1>
 <p>The website is a <b>FREE</b> interactive reader's community and puzzle website. The website allows readers of the <b>Hannover Game</b> and <b>Hannover series</b> of books to join a group depicted in the books, then complete puzzles and challenges to shift the Balance of Power to their team.</p>
 
-<p>To take part in the site, readers need to join the site and own a copy of the Hannover Game novel, either as an eBook or in Print.</p>
+<p>To take part in the site, readers need to join the site and own a copy of the Hannover Game novel, either as an <a href="http://bit.ly/TheHannoverGame" target="book" title="Buy the eBook"><b>eBook</b></a> or in <a href="http://bit.ly/HannoverGameEbook" target="book" title="Buy the Print book"><b>Print.</b></a>.</p>
 
 <h3>FAQ</h3>
 <dl>
     <dt>Is the website free?</dt>
-    <dd>Yes, the website is entirely free to join and play the games. You will however need to purchase a copy of the Hannover Game</dd>
+    <dd>Yes, the website is entirely free to <a href="/register">join and play</a> the games. You will however need to purchase a copy of the <a href="http://bit.ly/TheHannoverGame" target="book" title="Buy the eBook">Hannover Game.</a></dd>
     <dt>How is the Balance of Power calculated?</dt>
     <dd>Each time you complete a puzzle you get points, those points are added to your profile and your team's score. The team score is then added to the Hannover world total and the Balance of Power is calculated.</dd>
 </dl>
 
+<hr>
+
 <h2 style="color: red;">About the Hannover Game</h2>
+
+<img src="images/Hannover-Game-front-cover-final.png" width="206" height="300" style="border:1px solid grey; box-shadow: 3px 3px 6px grey;">
+
     <p>In the Hannover Game, the once retired Byford is again drawn back into service with Hannover, the secretive organisation he left several years earlier. The promise of a reward close to home proving impossible for the ageing operative to refuse. Meanwhile the Anti-Subversion and Terrorism Unit (ASTU) move into action to investigate a bold terrorist attack.</p>
 
     <p>Nelson and his protégé Melissa lead the investigation for ASTU, but what should be an exemplary investigation soon runs into difficulties and dangers. While ASTU hunt the perpetrators of the crime, the investigation and the attack becomes a game of opportunity for more than one side. In the world of Hannover everything and everyone is connected, no one will leave the Hannover Game untouched.</p>
 
 
+<hr>
+
 <h2 style="color: red;">About the Author</h2>
-<p>
     <img src="images/markJDiez-001.jpg" id="markJDiezProfilePic" alt="Picture of Mark J Diez" align="left" style="margin-right:10px; height: 280px; width: 280px;">
     
     <p>Mark J Diez began writing fiction in 1995, starting with the Tales of Malartu fantasy series of short stories and gamebooks. After several years focusing on fantasy adventure writing for video and board game worlds he migrated to action adventure and the Hannover series.</p>
 
     <p>His debut novel, The Hannover Game, is an innovative break from the usual indie author approaches. Drawing on his experience creating fantasy worlds, Diez has wrapped the novel in a lively online community and website. Readers are able to join one of the Hannover world's teams, complete puzzles, solve challenges and shift the Balance of Power in their favour.</p>
-
-</p>
