--- a/views/about.ejs
+++ b/views/about.ejs
@@ -15,7 +15,7 @@
 
 <h2 style="color: red;">About the Hannover Game</h2>
 
-<img src="images/Hannover-Game-front-cover-final.png" width="206" height="300" style="border:1px solid grey; box-shadow: 3px 3px 6px grey;">
+<img src="images/Hannover-Game-front-cover-final.png" width="206" height="300" style="border:1px solid grey; box-shadow: 3px 3px 6px grey;" align="left">
 
     <p>In the Hannover Game, the once retired Byford is again drawn back into service with Hannover, the secretive organisation he left several years earlier. The promise of a reward close to home proving impossible for the ageing operative to refuse. Meanwhile the Anti-Subversion and Terrorism Unit (ASTU) move into action to investigate a bold terrorist attack.</p>
 
