fixed image sizes

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -15,7 +15,7 @@
 
 <h2 style="color: red;">About the Hannover Game</h2>
 
-<img src="images/Hannover-Game-front-cover-final.png" width="206" height="300" style="border:1px solid grey; box-shadow: 3px 3px 6px grey;" align="left">
+<img src="images/Hannover-Game-front-cover-final.png" width="120" height="180" style="border:1px solid grey; box-shadow: 3px 3px 6px grey; margin-right: 10px;" align="left" alt="The Hannover Game" title="The Hannover Game">
 
     <p>In the Hannover Game, the once retired Byford is again drawn back into service with Hannover, the secretive organisation he left several years earlier. The promise of a reward close to home proving impossible for the ageing operative to refuse. Meanwhile the Anti-Subversion and Terrorism Unit (ASTU) move into action to investigate a bold terrorist attack.</p>
 
@@ -25,7 +25,7 @@
 <hr>
 
 <h2 style="color: red;">About the Author</h2>
-    <img src="images/markJDiez-001.jpg" id="markJDiezProfilePic" alt="Picture of Mark J Diez" align="left" style="margin-right:10px; height: 280px; width: 280px;">
+    <img src="images/markJDiez-001.jpg" alt="Picture of Mark J Diez" align="left" style="margin-right:10px; height: 240px; width: 250px;">
     
     <p>Mark J Diez began writing fiction in 1995, starting with the Tales of Malartu fantasy series of short stories and gamebooks. After several years focusing on fantasy adventure writing for video and board game worlds he migrated to action adventure and the Hannover series.</p>
 
