tweaks to about

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -4,18 +4,19 @@
 <p>To take part in the site, readers need to join the site and own a copy of the Hannover Game novel, either as an <a href="http://bit.ly/TheHannoverGame" target="book" title="Buy the eBook"><b>eBook</b></a> or in <a href="http://bit.ly/HannoverGameEbook" target="book" title="Buy the Print book"><b>Print.</b></a>.</p>
 
 <h3>FAQ</h3>
-<dl>
-    <dt>Is the website free?</dt>
-    <dd>Yes, the website is entirely free to <a href="/register">join and play</a> the games. You will however need to purchase a copy of the <a href="http://bit.ly/TheHannoverGame" target="book" title="Buy the eBook">Hannover Game.</a></dd>
-    <dt>How is the Balance of Power calculated?</dt>
-    <dd>Each time you complete a puzzle you get points, those points are added to your profile and your team's score. The team score is then added to the Hannover world total and the Balance of Power is calculated.</dd>
-</dl>
+<p><b>Is the website free?</b><br>
+    Yes, the website is entirely free to <a href="/register">join and play</a> the games. You will however need to purchase a copy of the <a href="http://bit.ly/TheHannoverGame" target="book" title="Buy the eBook">Hannover Game.</a>
+</p>
+    
+<p><b>How is the Balance of Power calculated?</b><br>
+    Each time you complete a puzzle you get points, those points are added to your profile and your team's score. The team score is then added to the Hannover world total and the Balance of Power is calculated.
+</p>
 
 <hr>
 
 <h2 style="color: red;">About the Hannover Game</h2>
 
-<img src="images/Hannover-Game-front-cover-final.png" width="120" height="180" style="border:1px solid grey; box-shadow: 3px 3px 6px grey; margin-right: 10px;" align="left" alt="The Hannover Game" title="The Hannover Game">
+<img src="images/Hannover-Game-front-cover-final.png" width="120" height="180" style="border:1px solid grey; box-shadow: 3px 3px 6px grey; margin-right: 15px;" align="left" alt="The Hannover Game" title="The Hannover Game">
 
     <p>In the Hannover Game, the once retired Byford is again drawn back into service with Hannover, the secretive organisation he left several years earlier. The promise of a reward close to home proving impossible for the ageing operative to refuse. Meanwhile the Anti-Subversion and Terrorism Unit (ASTU) move into action to investigate a bold terrorist attack.</p>
 
