Update home and footer

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -245,7 +245,7 @@
       <div class='row'>
         <div class="panel panel-default margin-top alt-back">
               <div class="panel-body center">
-                  <h2>Footer</h2>
+                  <p><img src="images/facebook_40.png"></p>
                   <p><a href="/terms">Terms & Conditions</a></p>
               </div>              
           </div>
