--- a/views/about.ejs
+++ b/views/about.ejs
@@ -3,9 +3,9 @@
 
 <p>To take part in the site, readers need to join the site and own a copy of the Hannover Game novel, either as an <a href="http://bit.ly/TheHannoverGame" target="book" title="Buy the eBook"><b>eBook</b></a> or in <a href="http://bit.ly/HannoverGameEbook" target="book" title="Buy the Print book"><b>Print.</b></a>.</p>
 
-<h3>FAQ</h3>
+<h3 style="color: red;">FAQ</h3>
 <p><b>Is the website free?</b><br>
-    Yes, the website is entirely free to <a href="/register">join and play</a> the games. You will however need to purchase a copy of the <a href="http://bit.ly/TheHannoverGame" target="book" title="Buy the eBook">Hannover Game.</a>
+    Yes, the website is entirely and exclusively free to all Hannover series readers to <a href="/register">join and play</a>. As this site is a free bonus for Hannover series readers, you will need to have purchased yout copy of the <a href="http://bit.ly/TheHannoverGame" target="book" title="Buy the eBook">Hannover Game</a> in order to crack the code and prove you are a member of the Hannover reader community.
 </p>
     
 <p><b>How is the Balance of Power calculated?</b><br>
