--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,9 +14,9 @@ If you don't own a copy of the Hannover Game, get it from Amazon as an <a href="
 
 <p>  
     <ul>
-        <li>&diams; <a href="/register">Sign-up on this site</a> and choose your team</li>
-        <li>&diams; Use your copy of the Hannover Game to break the first code</li>
-        <li>&diams; Start to beat the puzzles and shift the Balance of Power!</li>
+        <li>&diams;&nbsp;<a href="/register">Sign-up on this site</a> and choose your team</li>
+        <li>&diams;&nbsp;Use your copy of the Hannover Game to break the first code</li>
+        <li>&diams;&nbsp;Start to beat the puzzles and shift the Balance of Power!</li>
     </ul>
 </p>
 
@@ -24,6 +24,6 @@ If you don't own a copy of the Hannover Game, get it from Amazon as an <a href="
 
 <h2 style="color: red;">News &amp; Updates</h2>
 <p>December 2015</p>
-<p><b>Amazon</b> - The book has now been re-priced to <a href="http://bit.ly/TheHannoverGame" target="book" title="Buy the eBook">£5.78 for the eBook</a> and <a href="http://bit.ly/HannoverGameEbook" target="book" title="Buy the Print book">£8.94 for the Print</a> book. It will stay at this price over the Christmas break when we'll see how readers have responded to the pricing.</p>
+<p style="margin-left: 10px;"><b>Amazon</b> - The book has now been re-priced to <a href="http://bit.ly/TheHannoverGame" target="book" title="Buy the eBook">£5.78 for the eBook</a> and <a href="http://bit.ly/HannoverGameEbook" target="book" title="Buy the Print book">£8.94 for the Print</a> book. It will stay at this price over the Christmas break when we'll see how readers have responded to the pricing.</p>
 
-<p><b>Kobo and Waterstones</b> - I've just started to process the book onto Kobo and Waterstones and should have it available there in the next couple of weeks.</p>
+<p style="margin-left: 10px;"><b>Kobo and Waterstones</b> - I've just started to process the book onto Kobo and Waterstones and should have it available there in the next couple of weeks.</p>
