--- a/views/register.ejs
+++ b/views/register.ejs
@@ -36,7 +36,7 @@
 		    </fieldset>
 
 		    <fieldset class='margin-top'>
-		        <legend>Crack your first code - complete the sentence from the book</legend>
+		        <legend>Crack your first code - complete a sentence from the book</legend>
 		        <h4><strong>Chapter <%= code.chapter %>, Paragraph <%= code.paragraph %></strong></h4>
 		        <h4><%- code.sentence %></h4>
 		        <div class="form-group">
